k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: animated-web-deploy
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  replicas: 2
  selector:
    matchLabels:
      app: animated-web
  template:
    metadata:
      labels:
        app: animated-web
    spec:
      containers:
      - name: animated-web
        image: nginx:latest
        ports: 
        - containerPort: 80
