k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: animated-web-svc
spec:
  type: NodePort
  selector:
    app: animated-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
